layout issues on search bar

Conflicts:
	app/views/layouts/application.html.erb

--- a/app/assets/stylesheets/temporary.css.sass
+++ b/app/assets/stylesheets/temporary.css.sass
@@ -130,7 +130,7 @@ footer
       text-decoration: none
 
   .dropdowns
-    position: absolute
+    display: inline-block
     z-index: 500
 
     .fauxselect
@@ -168,9 +168,16 @@ footer
   .searchForm
 
     float: right
+    text-align: right
 
     form
       background: none
+      margin-bottom: 0
+
+    input
+      display: inline-block
+      width: auto
+
 
 ul.nav.nav-pills
   display: inline-block
